# tentech-api

./: .travis.yml  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml
data/: frameworks.txt  languages.txt  suggestion.json  tools.txt
migrations/2019-08-13-051919_create_users/: up.sql
migrations/2019-08-19-125525_create_products/: up.sql
migrations/2019-08-21-072328_create_tags/: up.sql
migrations/2019-08-21-073150_create_products_isers/: down.sql  up.sql
migrations/2019-08-26-101824_add-description-and-avatar-to-users/: down.sql  up.sql
migrations/2019-08-28-173134_add-simple-to-products/: down.sql  up.sql
migrations/2019-08-29-043217_create-reactions/: down.sql  up.sql
migrations/2019-10-26-081112_change_users_unique_constraint/: down.sql  up.sql
src/: email.rs  error.rs  errors.rs  lib.rs  main.rs  s3.rs  schema.rs  token.rs  validation.rs
src/db/: mod.rs  products.rs  reactions.rs  tags.rs  users.rs
src/models/: mod.rs  product.rs  reaction.rs  suggestion.rs  tag.rs  user.rs
src/routes/: mod.rs  products.rs  reactions.rs  s3.rs  suggestions.rs  tags.rs  users.rs
tests/: common.rs  users.rs
